add delete functionality
Errors:
	large marked sections only get sections of them highlighted
	cant delete large marked sections
	index error emerges sometimes

--- a/tasks/templates/viewer.html
+++ b/tasks/templates/viewer.html
@@ -43,6 +43,9 @@
 				<div id="outlineView"></div>
 
 				<div id="commentView">
+					<button id="deleteMarkButton" class="button-large" title="Delete Mark">
+						<i class= "fa solid fa-trash">Delete Mark</i>
+					</button>
                     <p id="testComment" class="centered-text">Select a mark to leave a comment</p>
 					<div id="voiceRecordContainer">
 
