fix rename bug "when rename a file, it creates a file with new name but leave the old file undeleted" -change the display file name to be file name without path

--- a/tasks/templates/filelist.html
+++ b/tasks/templates/filelist.html
@@ -40,7 +40,7 @@
                                             <small class="opacity-50 justify-content-md-end" id="uploadTime">Uploaded {{ upload.upload_time_difference}}</small>
 
                                         </div>
-                                        <h6 class="mb-0"><strong>{{ upload.get_simple_file_name }}</strong></h6>
+                                        <h6 class="mb-0"><strong>{{ upload.get_file_name_without_path }}</strong></h6>
                                         <p class="mb-0 opacity-75"><strong>Uploaded on: </strong><span class="upload-time">{{ upload.uploaded_at }}</span></p>
                                         <p class="mb-0 opacity-75"><strong>Comment:</strong>{{ upload.comments }}</p>
 
