--- a/static/css/share_file.css
+++ b/static/css/share_file.css
@@ -5,6 +5,8 @@
     max-height: 280px; 
     overflow-x: hidden;
     overflow-y: auto;
+    background-color: transparent;
+    border: 2px solid rgb(230,230,230);
 }
 .thumbnail-wrapper {
     opacity: 0;
@@ -96,4 +98,12 @@
 }
 .pfp {
     font-size: 30px;
+}
+
+.share-form{
+    border: 2px solid rgb(230,230,230);
+    border-radius: 20px;
+    width: 65%;
+    margin: auto;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
 }
