--- a/tasks/templates/partials/menu.html
+++ b/tasks/templates/partials/menu.html
@@ -10,7 +10,7 @@
     <li class="nav-item dropdown">
       <a class="nav-link" href = "#" onclick="set_notifications_as_read()" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><span class="bi bi-bell">
           {%if notifications|length > 0%}
-            <span id= "notification-alert" class="position-absolute top-10 start-100 translate-middle badge rounded-pill bg-danger" style="font-size:0.6rem;">
+            <span id= "notification-alert" class="position-absolute top-10 start-100 translate-middle badge rounded-pill bg-danger" style="font-size:0.6rem; top:10px">
               {%if notifications|length > 99%}
                 99+
               {%else%}
